committing before trying multi buffering